# reson

./: .gitignore  CMakeLists.txt  LICENSE  README.md  documentation.txt  dokumentacija.txt  example.py  setup.sh
bindings/: python_module.cpp
docs/: Doxyfile.in  DoxygenMainpage.md
include/core/: frame.hpp  spectre.hpp  types.hpp
include/dsp/: fft.hpp  helpers.hpp  mel.hpp  window.hpp
include/features/: mfcc_pipeline.hpp
tests/: fft_test.cpp  generator.hpp  pipeline_test.cpp  window_test.cpp
